[gd_scene load_steps=4 format=3 uid="uid://bi8vgsoslhvrb"]

[ext_resource type="Script" uid="uid://chqe7mwhwv255" path="res://panel/message_control.gd" id="1_gw4sm"]
[ext_resource type="Texture2D" uid="uid://pxj3b3e28fg3" path="res://panel/icons/clipboard_icon.tres" id="2_78cti"]
[ext_resource type="Texture2D" uid="uid://c141mpg6pwbt8" path="res://panel/icons/sent_icon.tres" id="3_qi5c7"]

[node name="MessageControl" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"H1PanelContainer"
script = ExtResource("1_gw4sm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 4

[node name="TypeTextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
texture = ExtResource("3_qi5c7")
expand_mode = 1
stretch_mode = 5

[node name="TimeLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_type_variation = &"HeaderMedium"
text = "00:00:00"
vertical_alignment = 1
text_overrun_behavior = 4

[node name="ClipboardButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Copy message to clipboard"
icon = ExtResource("2_78cti")
icon_alignment = 1
expand_icon = true

[node name="MessageCodeEdit" type="CodeEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "{
	\"hello\": \"world\"
	\"hello\": 12
}"
editable = false
highlight_all_occurrences = true
gutters_draw_line_numbers = true
auto_brace_completion_highlight_matching = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ClipboardButton" to="." method="_on_clipboard_button_pressed"]
